; ModuleID = '/home/carl/AnghaBench/mpv/misc/extr_bstr.c_bstrspn.c'
source_filename = "/home/carl/AnghaBench/mpv/misc/extr_bstr.c_bstrspn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bstr = type { i32, i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @bstrspn(i32 %0, i32* %1, i8* %2) #0 {
  %4 = alloca %struct.bstr, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = bitcast %struct.bstr* %4 to { i32, i32* }*
  %8 = getelementptr inbounds { i32, i32* }, { i32, i32* }* %7, i32 0, i32 0
  store i32 %0, i32* %8, align 8
  %9 = getelementptr inbounds { i32, i32* }, { i32, i32* }* %7, i32 0, i32 1
  store i32* %1, i32** %9, align 8
  store i8* %2, i8** %5, align 8
  store i32 0, i32* %6, align 4
  br label %10

10:                                               ; preds = %27, %3
  %11 = load i32, i32* %6, align 4
  %12 = getelementptr inbounds %struct.bstr, %struct.bstr* %4, i32 0, i32 0
  %13 = load i32, i32* %12, align 8
  %14 = icmp slt i32 %11, %13
  br i1 %14, label %15, label %30

15:                                               ; preds = %10
  %16 = load i8*, i8** %5, align 8
  %17 = getelementptr inbounds %struct.bstr, %struct.bstr* %4, i32 0, i32 1
  %18 = load i32*, i32** %17, align 8
  %19 = load i32, i32* %6, align 4
  %20 = sext i32 %19 to i64
  %21 = getelementptr inbounds i32, i32* %18, i64 %20
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @strchr(i8* %16, i32 %22)
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %26, label %25

25:                                               ; preds = %15
  br label %30

26:                                               ; preds = %15
  br label %27

27:                                               ; preds = %26
  %28 = load i32, i32* %6, align 4
  %29 = add nsw i32 %28, 1
  store i32 %29, i32* %6, align 4
  br label %10

30:                                               ; preds = %25, %10
  %31 = load i32, i32* %6, align 4
  ret i32 %31
}

declare dso_local i32 @strchr(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
